# decentralized-event-ticketing

./: Anchor.toml  Cargo.toml  README.md
app/: package.json  tsconfig.json
app/src/: App.js  idl.json
src/: lib.rs
tests/: ticket-dapp.ts
